# jenkins_test

./: CMakeLists.txt  README.md
inc/: sum.h
src/: gcovv.sh  main  main.cc  main.cc.gcov  main.gcda  main.gcno  sum.cc  sum.cc.gcov  sum.gcda  sum.gcno
test/: sumTest.cc
